--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
+    "reselect": "^4.0.0",
     "typescript": "3.4.3"
   },
   "scripts": {
